--- a/Web/04_react/09-routing-pr/package.json
+++ b/Web/04_react/09-routing-pr/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "09-rounter",
+  "name": "09-routing-pr",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,7 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.13.5",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.13.0"
